# PyNutil

./: .gitignore  GenerateSliceExample.py  Logo_PyNutil.icns  ProjectSegmentation3D_vec.py  PyNutil.py  PyNutilGUI.py  README.md  VisuAlignWarpVec.py  basic_workflow.py  dmg.py  input.json  main.py  pyproject.toml  requirements.txt  setup.py  testMemoVec.py  testOOP.py
PyNUtil/: testing.py
PyNutil/: PyNutil.py  __init__.py  config.py  context.py  coordinate_extraction.py  coordinate_processing.py  counting_and_load.py  data_analysis.py  dream_workflow.py  file_operations.py  folder_of_segmentations_to_meshview.py  folder_of_segmentations_to_meshview_multithreaded.py  folder_of_segmentations_to_meshview_sharon_comments.py  generate_target_slice.py  image_series.py  load_workflow.py  logging_utils.py  main.py  object_counting.py  oop_example.py  propagation.py  pyflat.py  read_and_write.py  reconstruct_dzi.py  results.py  testing.py  testing_openflatfile.py  testing_sharon.py  visualign_deformations.py
annotation_volumes/: WHS_v2_colours.csv  WHS_v3_colours.csv  WHS_v4_colours.csv  allen2015_colours.csv  allen2017_colours.csv  allen2022_colours.csv  allen2022_colours_updated.csv  annotation_25_reoriented.nrrd
benchmarks/: benchmark.py  profile_detailed.py
demos/: basic_example copy.py  basic_example.py  basic_example_custom_atlas.py  basic_example_intensity.py  brainglobe_coordinate_example.py  brainglobe_registration_usage.py  coordinate_example.py  expression_volume_brainrender.py  plot_cells_in_brainrender.py  plot_volume_coronal_sections.py  plot_volume_in_brainrender.py  using_transform_jsons.py
docs/: notes.md  requirements.txt
gui/: PyNutilGUI.py  gui_smoke_test.py  log_manager.py  settings_manager.py  ui_components.py  workers.py  (+1 more)
(+684 files in other folders)
