[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNutil"
dynamic = ["version"]
license = "MIT"
description = "a package to quantify atlas registered brain data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "brainglobe-atlasapi",
    "pandas",
    "pynrrd",
    "xmltodict",
    "opencv-python",
    "scipy",
    "nibabel",
    "orjson",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/Neural-Systems-at-UIO/PyNutil"

[project.optional-dependencies]
gui = ["PyQt6"]

[tool.setuptools.packages.find]
include = ["PyNutil*"]

[tool.setuptools_scm]
